tests/ui/tests/lowering/external-module-inside-of-internal-one.stderr
error[E016]: could not load the module `alpha1`
 --> ${DIRECTORY}/lowering/external-module-inside-of-internal-one.lushui:3:20
  |
3 | module alpha0 of { module alpha1 }
  |                    ^^^^^^^^^^^^^ 
  |
 note: `${DIRECTORY}/lowering/alpha0/alpha1.lushui`: No such file or directory (os error 2)

error[E016]: could not load the module `beta2`
 --> ${DIRECTORY}/lowering/external-module-inside-of-internal-one.lushui:5:37
  |
5 | module beta0 of { module beta1 of { module beta2 } }
  |                                     ^^^^^^^^^^^^ 
  |
 note: `${DIRECTORY}/lowering/beta0/beta1/beta2.lushui`: No such file or directory (os error 2)

error[E016]: could not load the module `omega0`
 --> ${DIRECTORY}/lowering/stopper.lushui:3:1
  |
3 | module omega0
  | ^^^^^^^^^^^^^ 
  |
 note: `${DIRECTORY}/lowering/stopper/omega0.lushui`: No such file or directory (os error 2)

error[E016]: could not load the module `psi1`
 --> ${DIRECTORY}/lowering/stopper.lushui:5:18
  |
5 | module psi0 of { module psi1 }
  |                  ^^^^^^^^^^^ 
  |
 note: `${DIRECTORY}/lowering/stopper/psi0/psi1.lushui`: No such file or directory (os error 2)

error[E016]: could not load the module `chi2`
 --> ${DIRECTORY}/lowering/stopper.lushui:7:35
  |
7 | module chi0 of { module chi1 of { module chi2 } }
  |                                   ^^^^^^^^^^^ 
  |
 note: `${DIRECTORY}/lowering/stopper/chi0/chi1/chi2.lushui`: No such file or directory (os error 2)

error: aborting due to 5 previous errors
 note: the error E016 has a detailed explanation
 help: run `lushui explain E016` to view it

