tests/ui/tests/lowering/external-module-inside-of-internal-one.lushui
;;; TEST fail check

module alpha0 of { module alpha1 }

module beta0 of { module beta1 of { module beta2 } }

module stopper
